--- a/package.json
+++ b/package.json
@@ -13,13 +13,20 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/express": "^5.0.0",
+    "@types/ws": "^8.5.12",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "express": "^4.21.0",
+    "framer-motion": "^11.5.6",
     "lucide-react": "^0.445.0",
     "next": "14.2.13",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18",
+    "ws": "^8.18.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
