--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /.pnp
 .pnp.js
 .yarn/install-state.gz
+package-lock.json
 
 # testing
 /coverage
@@ -19,7 +20,7 @@
 # misc
 .DS_Store
 *.pem
-
+/.next
 # debug
 npm-debug.log*
 yarn-debug.log*
