--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,9 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
+    "allowSyntheticDefaultImports": true,
     "incremental": true,
+    
     "plugins": [
       {
         "name": "next"
