--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
   "name": "mini-slack",
   "version": "0.1.0",
   "private": true,
+  "type": "commonjs",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/ws": "^8.5.12",
@@ -26,6 +32,7 @@
     "prisma": "^5.19.1",
     "react": "^18",
     "react-dom": "^18",
+    "recoil": "^0.7.7",
     "ws": "^8.18.0",
     "zod": "^3.23.8"
   },
