--- a/package.json
+++ b/package.json
@@ -5,24 +5,27 @@
   "type": "commonjs",
   "scripts": {
     "dev": "next dev",
-    "build": "npx prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
-    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.3",
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/ws": "^8.5.12",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
+    "emoji-picker-react": "^4.12.0",
     "express": "^4.21.0",
     "framer-motion": "^11.5.6",
     "lucide-react": "^0.445.0",
