--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "mini-slack",
   "version": "0.1.0",
   "private": true,
-  "type": "commonjs",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
+  },
+  "prisma": {
+    "seed": "npx tsx prisma/seed.ts"
+
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
@@ -23,6 +26,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/ws": "^8.5.12",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "emoji-picker-react": "^4.12.0",
@@ -40,6 +44,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -50,6 +55,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "tsx": "^4.19.1",
+    "typescript": "^5.6.3"
   }
 }
